--- a/addons/Dockerfile-vctools
+++ b/addons/Dockerfile-vctools
@@ -1,21 +1,24 @@
 # escape=`
 
 # Use the latest Windows Server Core image with .NET Framework 4.8.
-FROM buildtools2019
+FROM buildtools2019-vctools
 
 # Install Chocolatey
 RUN powershell [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 
 RUN powershell choco install python -y --version=3.7.7;
-RUN powershell choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y --version=3.17.1; `
+RUN powershell choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y --version=3.17.2; `
     choco install ninja -y --version=1.10.0; `
     choco install git -y --version=2.26.2; `
-    python -m pip install --upgrade pip; pip install conan==1.24.0; `
-    choco install jfrog-cli -y --version=1.35.3
+    python -m pip install --upgrade pip; pip install conan==1.25.1; `
+    choco install jfrog-cli -y --version=1.35.5
 
 # Uncomment the lines below for latest versions
 #RUN powershell choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y; `
 #    choco install ninja -y; `
 #    choco install git -y; `
 #    python -m pip install --upgrade pip; pip install conan; `
-#    choco install jfrog-cli -y
+#    choco install jfrog-cli -y;
+
+
+ENTRYPOINT ["C:\\BuildTools\\Common7\\Tools\\VsDevCmd.bat", "-arch=amd64", "&&", "powershell.exe", "-NoLogo", "-ExecutionPolicy", "Bypass"]
