--- a/addons/Dockerfile-vctools
+++ b/addons/Dockerfile-vctools
@@ -6,18 +6,20 @@ FROM buildtools2019-vctools
 # Install Chocolatey
 RUN powershell [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
 
-RUN powershell choco install python -y --version=3.7.7;
-RUN powershell choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y --version=3.17.2; `
-    choco install ninja -y --version=1.10.0; `
-    choco install git -y --version=2.26.2; `
-    python -m pip install --upgrade pip; pip install conan==1.25.1; `
-    choco install jfrog-cli -y --version=1.35.5
+RUN powershell choco install python -y --version=3.8.6;
+RUN powershell choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y --version=3.19.1; `
+    choco install ninja -y --version=1.10.2; `
+    choco install git -y --version=2.29.2.3; `
+    python -m pip install --upgrade pip; pip install wheel; `
+    pip install conan==1.32.0; `
+    choco install jfrog-cli -y --version=1.41.2
 
 # Uncomment the lines below for latest versions
 #RUN powershell choco install cmake --installargs 'ADD_CMAKE_TO_PATH=System' -y; `
 #    choco install ninja -y; `
 #    choco install git -y; `
-#    python -m pip install --upgrade pip; pip install conan; `
+#    python -m pip install --upgrade pip; pip install wheel; `
+#    pip install conan; `
 #    choco install jfrog-cli -y;
 
 
